[metadata]
name = symro
version = 0.0.2
author = Ariel A. Boucheikhchoukh
author_email = ariel.boucheikh@gmail.com
description = SYMbolic Reformulation and Optimization (SYMRO) package
long_description = file: README.md
url = https://github.com/ari-bou/symro
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Intended Audience :: Science/Research
    Development Status :: 2 - Pre-Alpha

[options]
package_dir =
    = core
packages = find:
python_requires = >=3.8
install_requires =
    amplpy>=0.7.1
    numpy>=1.21.2
    ordered-set>=4.0.2

[options.packages.find]
where = core